# metriclib

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/metric/: metric.h  metricdatabase.h  metricgroup.h  metricproperty.h  metrictype.h
src/: metric.cpp  metricdatabase.cpp  metricgroup.cpp  metrichelper.cpp  metrichelper.h  metricproperty.cpp
test/: CMakeLists.txt
test/src/: test_metric.cpp  test_metricdatabase.cpp  test_metricgroup.cpp  test_metrichelper.cpp  test_metricproperty.cpp
